@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-03-01T08:17:36Z",
+  "timestamp" : "2024-03-02T01:00:01Z",
   "count_outdated" : 1070,
   "uniques_outdated" : 623,
-  "count" : 1090,
+  "count" : 1091,
   "uniques" : 634,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2024-03-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
