@@ -1,5 +1,5 @@
 {
-  "count": 20,
+  "count": 21,
   "uniques": 1,
   "clones": [
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2024-03-01T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
