@@ -1,3 +1,12 @@
+2024-03-02T01:00:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8119146295 # 165
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-02
+* notice: last 14d: unq all: 1 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 623 1070 / 634 1090
+* notice: next accum: outdated-unq outdated-all / unq all: 623 1070 / 634 1091
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-03-01]
+
 2024-03-01T08:17:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8108460115 # 163
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
